--- a/volunteam/public/index.html
+++ b/volunteam/public/index.html
@@ -22,13 +22,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>Volunteam</title>
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
       This HTML file is a template.
@@ -41,7 +40,11 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
+  <!-- End of pageloading javascripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script>var instance = M.Carousel.getInstance(elem);
+    fullWidth: true
+  </script>
 </body>
 
 </html>
