--- a/volunteam/public/homepage.html
+++ b/volunteam/public/homepage.html
@@ -8,6 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -22,24 +23,29 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Volunteam</title>
+  <!-- jQuery CDN -->
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+  <!-- Materialize JavaScript CDN -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+  <!-- Materialize JavaScript Addons -->
+  <script src="./javascript/materialize.js"></script>
+
+
+  <!-- Title -->
+  <title>Volunteam</title>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
+
+
   <!-- <div id="root"></div> -->
-  <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
 
   <!-- Navbar -->
   <nav>
@@ -55,23 +61,13 @@
 
   <!-- Carousel -->
   <div class="carousel carousel-slider">
-    <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/800/400/food/1"></a>
-    <a class="carousel-item" href="#two!"><img src="https://lorempixel.com/800/400/food/2"></a>
-    <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/800/400/food/3"></a>
-    <a class="carousel-item" href="#four!"><img src="https://lorempixel.com/800/400/food/4"></a>
+    <a class="carousel-item" href="./images/Volunteers1.jpg"><img src="./images/Volunteers1.jpg"></a>
+    <a class="carousel-item" href="./images/Volunteers2.jpg"><img src="./images/Volunteers2.jpg"></a>
+    <a class="carousel-item" href="./images/Volunteers3.jpg"><img src="./images/Volunteers3.jpg"></a>
+    <a class="carousel-item" href="./images/Volunteers4.jpg"><img src="./images/Volunteers4.jpg"></a>
   </div>
 
 
-
-  <!-- Materialize jQuery CDN -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
-  <!-- Materialize Carousel Initializer -->
-  <script>
-    var instance = M.Carousel.init({
-      fullWidth: true
-    });
-  </script>
 </body>
 
 </html>
