--- a/volunteam/public/homepage.html
+++ b/volunteam/public/homepage.html
@@ -61,10 +61,10 @@
 
   <!-- Carousel -->
   <div class="carousel carousel-slider">
-    <a class="carousel-item" href="./images/Volunteers1.jpg"><img src="./images/Volunteers1.jpg"></a>
-    <a class="carousel-item" href="./images/Volunteers2.jpg"><img src="./images/Volunteers2.jpg"></a>
-    <a class="carousel-item" href="./images/Volunteers3.jpg"><img src="./images/Volunteers3.jpg"></a>
-    <a class="carousel-item" href="./images/Volunteers4.jpg"><img src="./images/Volunteers4.jpg"></a>
+    <a class="carousel-item"><img src="./images/Volunteers1.jpg"></a>
+    <a class="carousel-item"><img src="./images/Volunteers2.jpg"></a>
+    <a class="carousel-item"><img src="./images/Volunteers3.jpg"></a>
+    <a class="carousel-item"><img src="./images/Volunteers4.jpg"></a>
   </div>
 
 
