--- a/volunteam/public/homepage.html
+++ b/volunteam/public/homepage.html
@@ -59,7 +59,7 @@
     </div>
   </nav>
 
-  <!-- Carousel -->
+  <!-- Carousel / does not have an href link to make it easier to navigate-->
   <div class="carousel carousel-slider">
     <a class="carousel-item"><img src="./images/Volunteers1.jpg"></a>
     <a class="carousel-item"><img src="./images/Volunteers2.jpg"></a>
