--- a/volunteam/public/homepage.html
+++ b/volunteam/public/homepage.html
@@ -42,19 +42,19 @@
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
 
 
   <!-- <div id="root"></div> -->
 
   <!-- Navbar -->
   <nav>
-    <div class="nav-wrapper">
-      <a href="#" class="brand-logo center">Logo</a>
-      <ul id="nav-mobile" class="left hide-on-med-and-down">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">JavaScript</a></li>
+    <div class="nav-wrapper indigo">
+      <a href="#" class="brand-logo left">VolunTeam!</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="sass.html">Log In</a></li>
+        <li><a href="badges.html">Sign Up!</a></li>
+        <li><a href="collapsible.html">My Events</a></li>
       </ul>
     </div>
   </nav>
