Adds image to card

--- a/volunteam/public/homepage.html
+++ b/volunteam/public/homepage.html
@@ -40,7 +40,7 @@
 <link rel="stylesheet" href="./styles/style.css">
 
   <!-- Title -->
-  <title>Volunteam</title>
+  <title>VolunTeam!</title>
 </head>
 
 <body>
@@ -88,12 +88,12 @@
         <!-- Create Event Card -->
         <div class="card">
           <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="images/office.jpg">
+            <img class="activator" src="/volunteam/public/images/Plus-Sign-in-Circle.png">
           </div>
           <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Card Title<i
+            <span class="card-title activator grey-text text-darken-4">Create Event<i
                 class="material-icons right">more_vert</i></span>
-            <p><a href="#">This is a link</a></p>
+            <p><a href="/volunteam/public/createEventPage.html">Create an Event</a></p>
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
