Adds 'View Events' static page and some placeholder images

--- a/volunteam/public/homepage.html
+++ b/volunteam/public/homepage.html
@@ -88,7 +88,7 @@
         <!-- Create Event Card -->
         <div class="card">
           <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="/volunteam/public/images/Plus-Sign-in-Circle.png">
+            <img class="activator" src="https://via.placeholder.com/300">
           </div>
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4">Create Event<i
@@ -107,7 +107,7 @@
       <div class="col">
         <div class="card">
           <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="images/office.jpg">
+            <img class="activator" src="https://via.placeholder.com/300">
           </div>
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4">Card Title<i
