myAccount page static sample

--- a/volunteam/public/signUpPage.html
+++ b/volunteam/public/signUpPage.html
@@ -61,8 +61,8 @@
                     <label for="confirmPassword">Confirm Password</label>
                 </div>
             </div>
-            <a href="#" class="waves-effect waves-light btn blue">Link to Profile Image</a>
-            <a class="waves-effect waves-light btn blue">Sign In</a>
+            <!-- <a href="#" class="waves-effect waves-light btn blue">Link to My Account</a> -->
+            <a class="waves-effect waves-light btn blue">Sign Up</a>
         </form>
     </div>
     <script>
