last commit for Alex and I to start working

--- a/volunteam/public/createEventPage.html
+++ b/volunteam/public/createEventPage.html
@@ -38,8 +38,12 @@
                 </div>
             </div>
             <div class="input-field col s12">
-                <input id="date" type="text" class="validate">
+                <input id="date" type="date" class="validate">
                 <label for="date">Date</label>
+            </div>
+            <div class="input-field col s12">
+                <input id="time" type="time" class="validate">
+                <label for="time">Time</label>
             </div>
             <div class="input-field col s12">
                 <input id="description" type="text" class="validate">
