added log in static page sample

--- a/volunteam/public/myAccount.html
+++ b/volunteam/public/myAccount.html
@@ -18,7 +18,7 @@
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="./createEventPage.html">Create Event</a></li>
                 <li><a href="./logInPage.html">Log In</a></li>
-                <li><a href="./signUpPage.html">Sign In</a></li>
+                <li><a href="./signUpPage.html">Sign Up</a></li>
             </ul>
         </div>
     </nav>
@@ -77,7 +77,7 @@
                                         </form>
                                     </div>
                                 </div>
-                                <a class="waves-effect waves-light btn pink" id="updateAccount">Update</a>
+                                <a class="waves-effect waves-light btn pink pulse" id="updateAccount">Update</a>
                             </div>
                         </div>
                     </div>
