--- a/volunteam/public/signUpPage.html
+++ b/volunteam/public/signUpPage.html
@@ -20,7 +20,7 @@
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="./createEventPage.html">Create Event</a></li>
                 <li><a href="./logInPage.html">Log In</a></li>
-                <li><a href="./signUpPage.html">Sign In</a></li>
+                <li><a href="./signUpPage.html">Sign Up</a></li>
             </ul>
         </div>
     </nav>
@@ -84,7 +84,7 @@
                                         </form>
                                     </div>
                                 </div>
-                                <a class="waves-effect waves-light btn pink" id="signup">Sign Up</a>
+                                <a class="waves-effect waves-light btn orange pulse" id="signup">Sign Up</a>
                             </div>
                         </div>
                     </div>
