--- a/volunteam/public/logInPage.html
+++ b/volunteam/public/logInPage.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sign In Page</title>
+    <title>Log In Page</title>
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
+    <link rel="stylesheet" type="text/css" href="./logInPage.css">
     <style>
     </style>
 </head>
@@ -20,31 +20,40 @@
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="./createEventPage.html">Create Event</a></li>
                 <li><a href="./logInPage.html">Log In</a></li>
-                <li><a href="./signInPage.html">Sign In</a></li>
-
+                <li><a href="./signUpPage.html">Sign Up</a></li>
             </ul>
         </div>
     </nav>
-    <div class="row">
-        <form class="col s6">
-            <div class="row">
-                <div class="input-field col s12">
-                    <input id="username" type="text" class="validate">
-                    <label for="username">Username</label>
-                </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <input id="password" type="password" class="validate">
-                    <label for="password">Password</label>
-                </div>
-            </div>
-
-            <a class="waves-effect waves-light btn blue">Log In</a>
-        </form>
+    <div class="container">
+        <div class="row subContainer">
+            <form class="col s12">
+                <div class="row">
+                    <div class="col s12">
+                        <div class="card">
+                            <span class="card-title">Log In</span>
+                            <div class="card-image">
+                                <img src="../public/images/profilePictureSample.jpg" style="width:200px;">
+                            </div>
+                            <div class="card-content">
+                                <div class="row">
+                                    <div class="input-field col s12">
+                                        <input id="username" type="text" class="validate">
+                                        <label for="username">Username</label>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="input-field col s12">
+                                        <input id="password" type="password" class="validate">
+                                        <label for="password">Password</label>
+                                    </div>
+                                </div>
+                                <a class="waves-effect waves-light btn green pulse" id="login">Log In</a>
+                            </div>
+                        </div>
+                    </div>
+            </form>
+        </div>
     </div>
-    <script>
-    </script>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
