--- a/volunteam/public/myAccountPage.html
+++ b/volunteam/public/myAccountPage.html
@@ -8,16 +8,16 @@
     <title>My Account Page</title>
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" type="text/css" href="./myAccount.css">
+    <link rel="stylesheet" type="text/css" href="./myAccountPage.css">
 </head>
 
 <body>
     <nav>
         <div class="nav-wrapper indigo">
-            <a href="" class="brand-logo">VolunTeam</a>
+            <a href="" class="brand-logo center">VolunTeam!</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="./createEventPage.html">Create Event</a></li>
                 <li><a href="./logInPage.html">Log In</a></li>
+                <li><a href="./createEventPage.html">Create Event</a></li>
                 <li><a href="./signUpPage.html">Sign Up</a></li>
             </ul>
         </div>
