--- a/volunteam/public/signUpPage.html
+++ b/volunteam/public/signUpPage.html
@@ -16,11 +16,11 @@
 <body>
     <nav>
         <div class="nav-wrapper indigo">
-            <a href="" class="brand-logo">VolunTeam</a>
+            <a href="" class="brand-logo center">VolunTeam!</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="./createEventPage.html">Create Event</a></li>
                 <li><a href="./logInPage.html">Log In</a></li>
-                <li><a href="./signUpPage.html">Sign Up</a></li>
+                <li><a href="./createEventPage.html">Create Event</a></li>
+                <li><a href="./myAccountPage.html">My Account</a></li>
             </ul>
         </div>
     </nav>
@@ -32,7 +32,7 @@
                         <div class="card">
                             <span class="card-title">Sign Up</span>
                             <div class="card-image">
-                                <img src="../public/images/seattlePark2.jpg" style="width:450px;">
+                                <img src="../public/images/seattlePark1.jpg" style="width:90%;">
                             </div>
                             <div class="card-content">
                                 <div class="row">
