view one event static and react page framework

--- a/client/public/signUpPage.html
+++ b/client/public/signUpPage.html
@@ -21,6 +21,7 @@
                 <li><a href="./logInPage.html">Log In</a></li>
                 <li><a href="./createEventPage.html">Create Event</a></li>
                 <li><a href="./myAccountPage.html">My Account</a></li>
+                <li><a href="./viewOneEvent.html">View Sample Event</a></li>
             </ul>
         </div>
     </nav>
