--- a/client/public/createEventPage.html
+++ b/client/public/createEventPage.html
@@ -21,6 +21,7 @@
                 <li><a href="./logInPage.html">Log In</a></li>
                 <li><a href="./signUpPage.html">Sign Up</a></li>
                 <li><a href="./myAccountPage.html">My Account</a></li>
+                <li><a href="./viewOneEvent.html">View Sample Event</a></li>
             </ul>
         </div>
     </nav>
