--- a/client/public/logInPage.html
+++ b/client/public/logInPage.html
@@ -21,6 +21,7 @@
                 <li><a href="./createEventPage.html">Create Event</a></li>
                 <li><a href="./signUpPage.html">Sign Up</a></li>
                 <li><a href="./myAccountPage.html">My Account</a></li>
+                <li><a href="./viewOneEvent.html">View Sample Event</a></li>
             </ul>
         </div>
     </nav>
