--- a/client/public/myAccountPage.html
+++ b/client/public/myAccountPage.html
@@ -19,6 +19,7 @@
                 <li><a href="./logInPage.html">Log In</a></li>
                 <li><a href="./createEventPage.html">Create Event</a></li>
                 <li><a href="./signUpPage.html">Sign Up</a></li>
+                <li><a href="./viewOneEvent.html">View Sample Event</a></li>
             </ul>
         </div>
     </nav>
