background sample picture

--- a/client/public/logInPage.html
+++ b/client/public/logInPage.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 
-<body>
+<body background="../public/images/background_map.jpg">
     <nav>
         <div class="nav-wrapper indigo">
             <a href="" class="brand-logo center">VolunTeam!</a>
