Adds icons functionality (how the hell did I miss this before?)

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,9 @@
   <link rel="stylesheet" href="./styles/style.css">
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+  <!-- Google Icons -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 
   <!--
       manifest.json provides metadata used when your web app is installed on a
