added autocomplete to address on create event page

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -67,6 +67,7 @@
   <script>var instance = M.Carousel.getInstance(elem);
     fullWidth: true
   </script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBaLU-7p4spFKf611ZrMTTZoQUCC2KMgbg&libraries=places"></script>
 </body>
 
 </html>
